<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
                xmlns:tools = "http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height = "match_parent"
                tools:context = ".MainActivity">

    <TextView android:text = "@string/login_title"
              android:layout_width="wrap_content"
              android:layout_height = "wrap_content"
              android:id = "@+id/textview"
              android:textSize = "35dp"
              android:layout_alignParentTop = "true"
              android:layout_centerHorizontal = "true" />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/enter_message"
        android:id = "@+id/textView"
        android:layout_below = "@+id/textview"
        android:layout_centerHorizontal = "true"
        android:textSize = "25dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:scaleX="3"
        android:scaleY="3"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="46dp"
        android:focusable="true"
        android:inputType="text"
        android:hint="@string/login_hint"
        android:maxLines="1"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"
        android:id="@+id/text_password"
        android:layout_below="@+id/text_user"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/text_user"
        android:layout_alignEnd="@+id/text_user"
        android:hint="@string/password_hint"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_text"
        android:layout_below="@id/text_password"
        android:layout_marginTop="20dp"
        android:text="@string/create_account_text"
        android:textSize="15dp"
        android:textAlignment="center"
        android:onClick="create_account"/>

    <TextView
        android:layout_width="match_parent"
        android:clickable="true"
        android:onClick="OpenReg"
        android:layout_height="wrap_content"
        android:id="@+id/recoll_password_text"
        android:text="@string/create_account"
        android:textSize="15dp"
        android:textAlignment="center"
        android:layout_below="@+id/create_account_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/zaloguj_btn"
    android:id="@+id/button"
    android:layout_alignParentBottom="true"
    android:layout_toLeftOf="@+id/textview"
    android:layout_toStartOf="@+id/textview"
    android:onClick="login"/>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/anuluj_btn"
    android:id="@+id/button2"
    android:layout_alignParentBottom="true"
    android:layout_toRightOf="@+id/textview"
    android:layout_toEndOf="@+id/textview"
    android:onClick="cancel"/>


</RelativeLayout>
