<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.torak28.app.Register">

    <TextView android:text = "@string/login_title"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/textview"
        android:textSize = "35dp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true" />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/register_title"
        android:id = "@+id/textView"
        android:layout_below = "@+id/textview"
        android:layout_centerHorizontal = "true"
        android:textSize = "25dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:scaleX="3"
        android:scaleY="3"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="46dp"
        android:focusable="true"
        android:inputType="text"
        android:hint="@string/login"
        android:maxLines="1"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/haslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:inputType="textPassword"
        android:hint="@string/haslo"
        android:maxLines="1"
        android:textAlignment="center"
        android:layout_below="@+id/login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:inputType="text"
        android:hint="@string/email"
        android:maxLines="1"
        android:textAlignment="center"
        android:layout_below="@+id/haslo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/imie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:inputType="text"
        android:hint="@string/imie"
        android:maxLines="1"
        android:textAlignment="center"
        android:layout_below="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/nazwisko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:inputType="text"
        android:hint="@string/nazwisko"
        android:maxLines="1"
        android:textAlignment="center"
        android:layout_below="@+id/imie"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rejestruj_btn"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textview"
        android:layout_toStartOf="@+id/textview"
        android:onClick="OnReg"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wroc"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textview"
        android:layout_toEndOf="@+id/textview"
        android:onClick="Back"/>
</RelativeLayout>
